add title and TAC members

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -1,5 +1,5 @@
 ---
-title: "TAC3 Report (title to be confirmed)"
+title: "Third-year progress report for thesis advisory committee"
 keywords:
   - phd
   - thesis-plan
